# MiRROR

./: .gitignore  agnostic_search.py  benchmark.py  characterize_substitutions.py  main.py  prototype.py  pyproject.toml  pytest.ini  run_test.py  search.py  simpletest.py  tests.ipynb  util.py
dnps-bench/: benchmark-pride-ftp.txt  collate_fasta_excel.py  collect_xml.py  database_to_dataframe.py  make-test-data.sh  msconvert.sh  parse-strategies.txt  pipelines.txt  tables.txt
mirror/: __init__.py  affixes.py  alignment.py  annotation.py  boundaries.py  boundary.py  candidate.py  candidates.py  enumeration.py  filtration.py  fragments.py  gap.py  gaps.py  graph_util.py  graph_utils.py  io.py  paired_paths.py  pivot.py  pivots.py  preprocessing.py  presets.py  scan.py  search.py  sequence.py  session.py  spectral_alignment.py  spectrum_graph.py  spectrum_graphs.py  test_types.py  types.py  util.py
mrror/: affix_pairing.py  alignment.py  annotated_peaks.py  annotation.py  candidates.py  costmodels.py  enumeration.py  heapq_numba.py  io.py  pathspaces.py  spectrum_topology.py  util.py
params/: config.yaml  setup_from_transcriptome.yaml
pivotpoint/: __init__.py  cluster.py  distribution.py  interval_pair.py  io.py  peak.py  pivot.py  pivotpoint.py  sample.py  util.py
scripts/: clean.sh  setup.sh
test/: check.py  cluster.py  data.py  pivot.py
tests/: shared.py  test000_util.py  test001_io.py  test002_preprocessing.py  test010_import.py  test010_import.py.bak  test020_scan.py  test020_scan.py.bak  test030_search.py  test030_search.py.bak  test040_paired_paths.py  (+25 more)
(+110 files in other folders)
