[project]
name = "mirror"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastdtw>=0.3.4",
    "matplotlib>=3.10.5",
    "mzpaf>=0.2.0b0",
    "mzspeclib>=1.0.7",
    "nbconvert>=7.16.6",
    "networkx>=3.5",
    "numba==0.61.2",
    "numpy<=2.2",
    "pylibsufr>=0.1.11",
    "pyopenms>=3.4.0",
    "pyteomics>=4.7.5",
    "tqdm>=4.67.1",
]
