[project]
name = "mrror"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "biopython>=1.85",
    "editdistance>=0.8.1",
    "fastdtw>=0.3.4",
    "h5py>=3.15.1",
    "hdf5plugin>=6.0.0",
    "hydra-core>=1.3.2",
    "ipython>=9.5.0",
    "jupyter>=1.1.1",
    "mzpaf>=0.2.0b0",
    "mzspeclib>=1.0.7",
    "networkx>=3.5",
    "notebook>=7.4.5",
    "numba>=0.62.0",
    "numpy>=2.3.3",
    "pylibsufr>=0.1.11",
    "pyopenms>=3.4.0",
    "pyteomics>=4.7.5",
    "scipy>=1.16.2",
    "tqdm>=4.67.1",
]
